--- a/thesis/tex/glossary.tex
+++ b/thesis/tex/glossary.tex
@@ -78,11 +78,11 @@
 }
 \newglossaryentry{sink}{
 	name = sink,
-	description = {-- location where ions enter the postsynaptic cell after synaptic input has been received}
+	description = {--}
 }
 \newglossaryentry{source}{
 	name = source,
-	description = {-- location where ions exit the postsynaptic cell after synaptic input has been received to achieve electroneutrality}
+	description = {--}
 }
 \newglossaryentry{current dipole}{
 	name = current dipole,
